# Irrlicht

./: .gitignore  CMakeLists.txt
Irrlicht/RenderEngines/Direct3D11/: CD3D11Driver.cpp  CD3D11Driver.h  CD3D11FixedFunctionMaterialRenderer.cpp  CD3D11FixedFunctionMaterialRenderer.h  CD3D11HardwareBuffer.cpp  CD3D11HardwareBuffer.h  CD3D11MaterialRenderer.h  CD3D11RenderTarget.cpp  CD3D11RenderTarget.h  CD3D11Resources.h  CD3D11Shader.cpp  CD3D11Shader.h  CD3D11Texture.cpp  CD3D11Texture.h  CD3D11Utility.cpp  CD3D11Utility.h  CD3D11VertexDeclaration.cpp  CD3D11VertexDeclaration.h  CMakeLists.txt
Irrlicht/RenderEngines/OpenGL/: CMakeLists.txt  COpenGLCoreRenderTarget.h  COpenGLDriver.cpp  COpenGLDriver.h  COpenGLExtensionHandler.cpp  COpenGLExtensionHandler.h  COpenGLHardwareBuffer.cpp  COpenGLHardwareBuffer.h  COpenGLMaterialRenderer.h  COpenGLNormalMapRenderer.cpp  COpenGLNormalMapRenderer.h  COpenGLParallaxMapRenderer.cpp  COpenGLParallaxMapRenderer.h  COpenGLSLMaterialRenderer.cpp  COpenGLShader.cpp  COpenGLShader.h  COpenGLShaderMaterialRenderer.cpp  COpenGLStateCacheManager.cpp  COpenGLStateCacheManager.h  COpenGLSupport.h  COpenGLTexture.cpp  COpenGLTexture.h  COpenGLVertexDeclaration.cpp  COpenGLVertexDeclaration.h
Irrlicht/RenderEngines/Vulkan/: CMakeLists.txt  CVulkanCommandBuffer.cpp  CVulkanCommandBuffer.h  CVulkanDescriptorPool.cpp  CVulkanDescriptorSet.cpp  CVulkanDescriptorSet.h  CVulkanDevice.cpp  CVulkanDevice.h  CVulkanDriver.cpp  CVulkanDriver.h  CVulkanEventQuery.cpp  CVulkanEventQuery.h  CVulkanFramebuffer.cpp  CVulkanFramebuffer.h  CVulkanGpuParams.cpp  CVulkanGpuParams.h  CVulkanGpuPipelineState.cpp  CVulkanGpuPipelineState.h  CVulkanHardwareBuffer.cpp  CVulkanHardwareBuffer.h  CVulkanOcclusionQuery.cpp  CVulkanOcclusionQuery.h  CVulkanQueue.cpp  CVulkanQueue.h  CVulkanRenderTarget.cpp  CVulkanRenderTarget.h  CVulkanResources.cpp  CVulkanResources.h  CVulkanShader.cpp  CVulkanShader.h  CVulkanShaderCompiler.cpp  CVulkanShaderCompiler.h  CVulkanSharedDefines.h  CVulkanSwapChain.cpp  CVulkanTexture.cpp  CVulkanTexture.h  CVulkanTimerQuery.cpp  CVulkanUtility.cpp  CVulkanUtility.h  CVulkanVertexDeclaration.cpp  (+2 more)
Noesis/: Application.cpp  CMakeLists.txt  CommandLine.cpp  DelegateCommand.cpp  DispatcherTimer.cpp  IrrNsGuiBindings.cpp  IrrWindow.cpp  Window.cpp
Noesis/NsContextImpl/: IrrImage.cpp  IrrOsDeviceContext.cpp  IrrRenderContext.cpp
Noesis/NsProvider/: FileTextureProvider.cpp  FileTextureProvider.h  IrrNsGuiResourceProvider.cpp  IrrNsGuiResourceProvider.h  IrrNsGuiStream.h
Noesis/include/NsApp/: Application.h  CommandLine.h  DelegateCommand.h  DispatcherTimer.h  IrrNoesis.h  IrrNsGuiBindings.h  IrrWindow.h  NotifyPropertyChangedBase.h  NsUtility.h  Window.h
Noesis/include/NsImpl/: IrrImage.h  IrrOsDeviceContext.h  IrrRenderContext.h
Noesis/shaders/: ClearPS.hlsl  Shader.frag  ShaderPS.hlsl  ShaderVS.hlsl  ShadersDx.h  ShadersGL140.h
dep/: CMakeLists.txt
dep/NoesisGui/: CMakeLists.txt
dep/NoesisGui/Include/: Noesis_pch.h
dep/SPIRV/Glslang/: CMakeLists.txt
dep/SPIRV/SPIRV-Tools/: CMakeLists.txt  build-version.inc
dep/glm/: CMakeLists.txt
dep/jpeglib/: CMakeLists.txt
dep/libpng/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/zlib/: CMakeLists.txt  example.c
examples/: CMakeLists.txt
examples/01.HelloWorld/: CMakeLists.txt  main.cpp
examples/02.Quake3Map/: CMakeLists.txt  main.cpp
examples/03.CustomSceneNode/: CMakeLists.txt  main.cpp
examples/04.Movement/: CMakeLists.txt  Makefile  main.cpp
examples/05.UserInterface/: CMakeLists.txt  Makefile  main.cpp
examples/06.2DGraphics/: CMakeLists.txt  Makefile  main.cpp
examples/07.Collision/: CMakeLists.txt  Makefile  main.cpp
examples/08.SpecialFX/: CMakeLists.txt  Makefile  main.cpp
examples/09.Meshviewer/: CMakeLists.txt  Makefile  main.cpp
examples/10.Shaders/: CMakeLists.txt  Makefile  main.cpp
examples/11.PerPixelLighting/: CMakeLists.txt  Makefile  main.cpp
examples/12.TerrainRendering/: CMakeLists.txt  Makefile  main.cpp
examples/13.RenderToTexture/: CMakeLists.txt  Makefile  main.cpp
examples/14.Win32Window/: CMakeLists.txt  Makefile  main.cpp
examples/15.LoadIrrFile/: CMakeLists.txt  Makefile  main.cpp
examples/16.Quake3MapShader/: CMakeLists.txt  Makefile  main.cpp
examples/17.HelloWorld_Mobile/: CMakeLists.txt  Makefile  main.cpp
examples/18.SplitScreen/: CMakeLists.txt  Makefile  main.cpp
examples/19.MouseAndJoystick/: CMakeLists.txt  Makefile
examples/20.ManagedLights/: CMakeLists.txt  Makefile  main.cpp
examples/21.Quake3Explorer/: CMakeLists.txt  Makefile  main.cpp  q3factory.cpp
examples/22.MaterialViewer/: CMakeLists.txt  Makefile  main.cpp  main.h
examples/23.SMeshHandling/: CMakeLists.txt  Makefile
examples/24.CursorControl/: CMakeLists.txt  Makefile  main.cpp
examples/25.XmlHandling/: CMakeLists.txt  Makefile  main.cpp
examples/26.OcclusionQuery/: CMakeLists.txt  Makefile  main.cpp
examples/29.HardwareSkinning/: HardwareSkinning.cbp  Makefile  main.cpp
examples/30.Profiling/: Makefile
examples/31.HardwareInstancing/: main.cpp
examples/32.NoesisGUI/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  StdAfx.h  main.cpp
examples/32.NoesisGUI/UI/: MainMenu.xaml  MainMenu.xaml.cpp  MainMenu.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MenuResources.xaml  OptionSelector.xaml  OptionSelector.xaml.cpp  OptionSelector.xaml.h  SettingsMenu.xaml  SettingsMenu.xaml.cpp  SettingsMenu.xaml.h  StartMenu.xaml  StartMenu.xaml.cpp  StartMenu.xaml.h
examples/33.NoesisGUIWindow/: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  StdAfx.h  main.cpp
examples/33.NoesisGUIWindow/Core/: ThemeGenerator.cpp  ThemeGenerator.h
examples/33.NoesisGUIWindow/Theme/: Colors.xaml
examples/33.NoesisGUIWindow/UI/: FileDialog.xaml  FileDialog.xaml.cpp  FileDialog.xaml.h  MainSettings.xaml  MainSettings.xaml.cpp  MainSettings.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  RootWindow.xaml  (+2 more)
examples/Demo/: CDemo.cpp  CDemo.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  Makefile  main.cpp
(+714 files in other folders)
