add_library(noesisgui SHARED IMPORTED GLOBAL)

IF (WIN32)
  IF (PLATFORM EQUAL 64)
    SET(NOESIS_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/Lib/windows_x86_64/Noesis.lib")
  ELSE()
    SET(NOESIS_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/Lib/windows_x86/Noesis.lib")
  ENDIF()
ELSE()
    SET(NOESIS_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/Lib/ios/libNoesis.a")
ENDIF()

IF (WIN32)
  IF (PLATFORM EQUAL 64)
    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/windows_x86_64/Noesis.dll")
  ELSE()
    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/windows_x86/Noesis.dll")
  ENDIF()
ENDIF()

IF (APPLE)
    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/osx/libNoesis.dylib")
ENDIF()

IF (UNIX)
  IF (PLATFORM EQUAL 64)
    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/linux_x86_64/libNoesis.so")
  ELSE()
    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/linux_x86/libNoesis.so")
  ENDIF()
ENDIF()

#IF (ANDROID)
#  IF (PLATFORM EQUAL 64)
#    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/linux_x86_64/libNoesis.so")
#  ELSE()
#    SET(NOESIS_BINARY "${CMAKE_CURRENT_SOURCE_DIR}/Bin/linux_x86/libNoesis.so")
#  ENDIF()
#ENDIF()

set_target_properties(noesisgui
  PROPERTIES
    IMPORTED_LOCATION
      "${NOESIS_BINARY}"
	IMPORTED_IMPLIB 
      "${NOESIS_LIBRARY}"
    INTERFACE_INCLUDE_DIRECTORIES
      "${CMAKE_CURRENT_SOURCE_DIR}/include")

MESSAGE (${IntSTATUS} "Noesis GUI 2.1.0f1 (r6972)")
